Implement push constants

--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=3840,2066
 Collapsed=0
 
 [Window][Settings]
@@ -65,8 +65,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=235,24
-Size=1685,1056
+Pos=468,24
+Size=3372,2042
 Collapsed=0
 DockId=0x00000004,0
 
@@ -88,7 +88,7 @@ Collapsed=0
 
 [Window][Frame time]
 Pos=0,24
-Size=233,1056
+Size=466,2042
 Collapsed=0
 DockId=0x00000005,0
 
@@ -98,11 +98,11 @@ Size=999,639
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=1920,1056 Split=X Selected=0x995B0CF8
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=3840,2042 Split=X Selected=0x995B0CF8
   DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=466,2042 Selected=0x8F738F76
   DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=3372,2042 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=0,0 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=0,0 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
 
