--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -65,10 +65,10 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=549,24
-Size=3291,2042
+Pos=631,24
+Size=3209,2042
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000008,0
 
 [Window][Reflection]
 Pos=0,19
@@ -82,13 +82,13 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=110,654
-Size=352,271
+Pos=122,853
+Size=305,145
 Collapsed=0
 
 [Window][Frame time]
 Pos=0,24
-Size=547,2042
+Size=273,1056
 Collapsed=0
 DockId=0x00000005,0
 
@@ -97,12 +97,20 @@ Pos=60,60
 Size=999,639
 Collapsed=0
 
+[Window][Scene Hierarchy]
+Pos=0,24
+Size=629,2042
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=3840,2042 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=547,2042 Selected=0x8F738F76
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=3291,2042 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=0,0 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=3840,2042 Split=X Selected=0x995B0CF8
+  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=547,2042 Selected=0x8F738F76
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=3291,2042 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
+    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=629,2042 Selected=0x9A68760C
+        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=3209,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
 
