--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -65,8 +65,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=631,24
-Size=3209,2042
+Pos=633,24
+Size=2363,2042
 Collapsed=0
 DockId=0x00000008,0
 
@@ -82,7 +82,7 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=122,853
+Pos=55,1430
 Size=305,145
 Collapsed=0
 
@@ -99,18 +99,34 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=629,2042
+Size=699,2042
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Inspector]
+Pos=2998,24
+Size=842,2042
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Hierarchy]
+Pos=0,24
+Size=631,2042
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=3840,2042 Split=X Selected=0x995B0CF8
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=547,2042 Selected=0x8F738F76
-  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=3291,2042 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
-    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=629,2042 Selected=0x9A68760C
-        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=3209,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=3840,2042 Split=X Selected=0x995B0CF8
+  DockNode            ID=0x0000000B Parent=0x3BC79352 SizeRef=631,2042 Selected=0x788BAA0D
+  DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=3207,2042 Split=X
+    DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=2363,1056 Split=X
+      DockNode        ID=0x00000005 Parent=0x00000009 SizeRef=547,2042 Selected=0x8F738F76
+      DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=3291,2042 Split=X
+        DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
+        DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
+          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
+          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
+            DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
+            DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+    DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=842,1056 Selected=0xF02CD328
 
