--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -82,7 +82,7 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=45,1239
+Pos=45,1061
 Size=408,175
 Collapsed=0
 
@@ -107,7 +107,7 @@ DockId=0x00000006,0
 Pos=3202,26
 Size=638,2040
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000D,0
 
 [Window][Hierarchy]
 Pos=0,26
@@ -119,14 +119,14 @@ DockId=0x0000000B,0
 Pos=0,1532
 Size=3200,534
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x0000000E,0
 
 [Docking][Data]
 DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3840,2040 Split=X Selected=0x995B0CF8
   DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=3200,2040 Split=Y
-    DockNode            ID=0x0000000D Parent=0x00000009 SizeRef=3840,1504 Split=X
-      DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=500,2042 Selected=0x788BAA0D
-      DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=2698,2042 Split=X
+    DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=3840,1504 Split=X
+      DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Selected=0x788BAA0D
+      DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=2698,2042 Split=X
         DockNode        ID=0x00000005 Parent=0x0000000C SizeRef=547,2042 Selected=0x8F738F76
         DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=3291,2042 Split=X
           DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
@@ -135,6 +135,6 @@ DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3840,2040 
             DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
               DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
               DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode            ID=0x0000000F Parent=0x00000009 SizeRef=3840,534 Selected=0x371352B7
-  DockNode              ID=0x0000000E Parent=0x3BC79352 SizeRef=638,2040 Selected=0xF02CD328
+    DockNode            ID=0x0000000E Parent=0x00000009 SizeRef=3840,534 Selected=0x371352B7
+  DockNode              ID=0x0000000D Parent=0x3BC79352 SizeRef=638,2040 Selected=0xF02CD328
 
