Implement optional wireframe rendering

--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -82,7 +82,7 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=54,1322
+Pos=0,675
 Size=416,215
 Collapsed=0
 
@@ -111,9 +111,9 @@ DockId=0x0000000D,0
 
 [Window][Hierarchy]
 Pos=0,26
-Size=500,1612
+Size=500,936
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000F,0
 
 [Window][Content Browser]
 Pos=0,1640
@@ -121,11 +121,19 @@ Size=3200,426
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][Scene Renderer]
+Pos=0,964
+Size=500,674
+Collapsed=0
+DockId=0x00000010,0
+
 [Docking][Data]
 DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3840,2040 Split=X Selected=0x995B0CF8
   DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=3200,2040 Split=Y
     DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=3840,1612 Split=X
-      DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Selected=0x788BAA0D
+      DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Split=Y Selected=0x788BAA0D
+        DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=500,936 Selected=0x788BAA0D
+        DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=500,674 Selected=0x5349D603
       DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=2698,2042 Split=X
         DockNode        ID=0x00000005 Parent=0x0000000C SizeRef=547,2042 Selected=0x8F738F76
         DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=3291,2042 Split=X
