Cleanup fft code, and adjust initial spectrum

--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -55,7 +55,7 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2066
+Size=2560,1377
 Collapsed=0
 
 [Window][Settings]
@@ -66,7 +66,7 @@ DockId=0x00000001,0
 
 [Window][Viewport]
 Pos=502,26
-Size=2698,1612
+Size=1631,1079
 Collapsed=0
 DockId=0x00000008,0
 
@@ -82,8 +82,8 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=0,675
-Size=416,215
+Pos=17,785
+Size=366,182
 Collapsed=0
 
 [Window][Frame time]
@@ -104,37 +104,37 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=3202,26
-Size=638,2040
+Pos=2135,26
+Size=425,1351
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Hierarchy]
 Pos=0,26
-Size=500,936
+Size=500,619
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Content Browser]
-Pos=0,1640
-Size=3200,426
+Pos=0,1107
+Size=2133,270
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000011,0
 
 [Window][Scene Renderer]
-Pos=0,964
-Size=500,674
+Pos=0,647
+Size=500,458
 Collapsed=0
 DockId=0x00000010,0
 
 [Docking][Data]
-DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3840,2040 Split=X Selected=0x995B0CF8
-  DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=3200,2040 Split=Y
-    DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=3840,1612 Split=X
+DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=2560,1351 Split=X Selected=0x995B0CF8
+  DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=2133,1351 Split=Y
+    DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=2560,1079 Split=X
       DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Split=Y Selected=0x788BAA0D
-        DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=500,936 Selected=0x788BAA0D
-        DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=500,674 Selected=0x5349D603
-      DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=2698,2042 Split=X
+        DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=500,619 Selected=0x788BAA0D
+        DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=500,458 Selected=0x5349D603
+      DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=1631,2042 Split=X
         DockNode        ID=0x00000005 Parent=0x0000000C SizeRef=547,2042 Selected=0x8F738F76
         DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=3291,2042 Split=X
           DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
@@ -143,6 +143,6 @@ DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,26 Size=3840,2040 
             DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
               DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
               DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode            ID=0x0000000E Parent=0x00000009 SizeRef=3840,426 Selected=0x371352B7
-  DockNode              ID=0x0000000D Parent=0x3BC79352 SizeRef=638,2040 Selected=0xF02CD328
+    DockNode            ID=0x00000011 Parent=0x00000009 SizeRef=2560,270 Selected=0x371352B7
+  DockNode              ID=0x0000000D Parent=0x3BC79352 SizeRef=425,1351 Selected=0xF02CD328
 
