--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -82,7 +82,7 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=20,891
+Pos=71,775
 Size=275,299
 Collapsed=0
 
@@ -107,7 +107,7 @@ DockId=0x00000006,0
 Pos=1978,21
 Size=582,1356
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000011,0
 
 [Window][Hierarchy]
 Pos=0,21
@@ -119,7 +119,7 @@ DockId=0x0000000F,0
 Pos=0,1106
 Size=1976,271
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000E,0
 
 [Window][Scene Renderer]
 Pos=0,644
@@ -129,7 +129,7 @@ DockId=0x00000010,0
 
 [Docking][Data]
 DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,21 Size=2560,1356 Split=X Selected=0x995B0CF8
-  DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=1976,1351 Split=Y
+  DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=1976,1356 Split=Y
     DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=2560,1083 Split=X
       DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Split=Y Selected=0x788BAA0D
         DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=500,621 Selected=0x788BAA0D
@@ -143,6 +143,6 @@ DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,21 Size=2560,1356 
             DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
               DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
               DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode            ID=0x00000011 Parent=0x00000009 SizeRef=2560,271 Selected=0x371352B7
-  DockNode              ID=0x0000000D Parent=0x3BC79352 SizeRef=582,1351 Selected=0xF02CD328
+    DockNode            ID=0x0000000E Parent=0x00000009 SizeRef=2560,271 Selected=0x371352B7
+  DockNode              ID=0x00000011 Parent=0x3BC79352 SizeRef=582,1356 Selected=0xF02CD328
 
