Implement play and stop buttons, refactor camera logic

--- a/NeonEditor/imgui.ini
+++ b/NeonEditor/imgui.ini
@@ -65,8 +65,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Viewport]
-Pos=502,21
-Size=1474,1083
+Pos=502,57
+Size=1567,1077
 Collapsed=0
 DockId=0x00000008,0
 
@@ -82,7 +82,7 @@ Size=1699,1061
 Collapsed=0
 
 [Window][Renderer]
-Pos=145,1160
+Pos=70,754
 Size=275,299
 Collapsed=0
 
@@ -104,45 +104,53 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=1978,21
-Size=582,1356
+Pos=2071,21
+Size=489,1356
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000B,0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=500,621
+Size=500,560
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Content Browser]
+Pos=0,1136
+Size=2069,241
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Scene Renderer]
+Pos=0,583
+Size=500,551
 Collapsed=0
 DockId=0x0000000F,0
 
-[Window][Content Browser]
-Pos=0,1106
-Size=1976,271
-Collapsed=0
-DockId=0x0000000E,0
-
-[Window][Scene Renderer]
-Pos=0,644
-Size=500,460
+[Window][##tool_bar]
+Pos=502,21
+Size=1567,34
 Collapsed=0
 DockId=0x00000010,0
 
 [Docking][Data]
-DockSpace               ID=0x3BC79352 Window=0x4647B76E Pos=0,21 Size=2560,1356 Split=X Selected=0x995B0CF8
-  DockNode              ID=0x00000009 Parent=0x3BC79352 SizeRef=1976,1356 Split=Y
-    DockNode            ID=0x0000000A Parent=0x00000009 SizeRef=2560,1083 Split=X
-      DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=500,2042 Split=Y Selected=0x788BAA0D
-        DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=500,621 Selected=0x788BAA0D
-        DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=500,460 Selected=0x5349D603
-      DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=1474,2042 Split=X
-        DockNode        ID=0x00000005 Parent=0x0000000C SizeRef=547,2042 Selected=0x8F738F76
-        DockNode        ID=0x00000007 Parent=0x0000000C SizeRef=3291,2042 Split=X
-          DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
-          DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
-            DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
-            DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
-              DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
-              DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-    DockNode            ID=0x0000000E Parent=0x00000009 SizeRef=2560,271 Selected=0x371352B7
-  DockNode              ID=0x00000011 Parent=0x3BC79352 SizeRef=582,1356 Selected=0xF02CD328
+DockSpace                 ID=0x3BC79352 Window=0x4647B76E Pos=0,21 Size=2560,1356 Split=X Selected=0x995B0CF8
+  DockNode                ID=0x00000009 Parent=0x3BC79352 SizeRef=2069,1356 Split=Y
+    DockNode              ID=0x0000000A Parent=0x00000009 SizeRef=2560,1113 Split=X
+      DockNode            ID=0x0000000E Parent=0x0000000A SizeRef=500,1356 Split=Y Selected=0x788BAA0D
+        DockNode          ID=0x0000000D Parent=0x0000000E SizeRef=500,560 Selected=0x788BAA0D
+        DockNode          ID=0x0000000F Parent=0x0000000E SizeRef=500,551 Selected=0x5349D603
+      DockNode            ID=0x00000012 Parent=0x0000000A SizeRef=1567,1356 Split=Y
+        DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=2560,34 HiddenTabBar=1 Selected=0x16C8A02A
+        DockNode          ID=0x00000011 Parent=0x00000012 SizeRef=2560,1077 Split=X
+          DockNode        ID=0x00000005 Parent=0x00000011 SizeRef=547,2042 Selected=0x8F738F76
+          DockNode        ID=0x00000007 Parent=0x00000011 SizeRef=3291,2042 Split=X
+            DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=852,1061 Selected=0x1C33C293
+            DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2986,1061 Split=X
+              DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1295,2047 Selected=0x7F921A62
+              DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=0,0 Split=X Selected=0x995B0CF8
+                DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=699,2042 Selected=0x9A68760C
+                DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=2259,2042 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
+    DockNode              ID=0x0000000C Parent=0x00000009 SizeRef=2560,241 Selected=0x371352B7
+  DockNode                ID=0x0000000B Parent=0x3BC79352 SizeRef=489,1356 Selected=0xF02CD328
 
